# ros2_car

./: .gitignore  AGENTS.md  README.md
docs/: changes.md  details.md
src/car_demo1/: CMakeLists.txt  package.xml
src/car_demo1/config/: bridge.yaml  diff_drive_controller.yaml  mapping.rviz
src/car_demo1/launch/: bridge.launch.py  car_gazebo.launch.py  car_gazebo.launch.py.backup  car_gazebo2.launch.py  car_ignition.launch.py  ign_bridge.launch.py  mapping.launch.py
src/car_demo1/urdf/: car.urdf.xacro  car.urdf.xacro.bak  car.urdf.xacro.new  car_legacy.urdf.xacro
src/car_demo1/worlds/: room.world
src/ros_car/: CMakeLists.txt  package.xml
src/ros_car/config/: ackermann_controller.yaml  mapper_params.yaml  nav2_params.yaml  rviz_config.rviz
src/ros_car/launch/: mapping.launch.py  nav.launch.py  sim.launch.py
src/ros_car/maps/: map6.pgm  map6.yaml  my_map3.yaml
src/ros_car/scripts/: reverse_test.sh  save_map.sh  sim_joint_state_publisher.py  start_mapping.sh  teleop.sh  tf_publisher.py
src/ros_car/urdf/: ros_car.urdf  ros_car.urdf.bak  ros_car.urdf.xacro
src/ros_car/worlds/: fish.world  fishbot.world  simple_obstacles.world
